name:                test-githubAPIhs
version:             0.1.0.0
homepage:            https://github.com/matsubara0507/test-githubAPIhs#readme
license:             BSD3
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2017 MATSUBARA Nobutada
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test-githubAPIhs
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , github
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsubara0507/test-githubAPIhs
